Update parent POM and BOM for JDK 17 and major library updates (#313)
* Bump version to 2.0.0-SNAPSHOT
* Bump kiwi-parent from 2.0.20 to 3.0.1
* Bump kiwi-bom from 1.1.1 to 2.0.0
* Bump kiwi libraries to next major version
* Update build for JDK 17 and 20
* Update CodeQL workflow to use JDK 17
* Fix Dropwizard package changes
* Refactor from javax to jakarta namespace for Jakarta EE 9
* Sonar: clean up code for JDK 17 (use toList, use pattern matching in
  instanceof, etc.)
* IntelliJ inspections: replace switch with enhanced switch and/or
  switch expressions
* Remove some redundant warning suppression annotations
* Add warning suppression comments and annotations where it
  makes sense (mostly in tests, e.g. for ConstantValue)
* Convert one class to a record in KiwiReflection2Test and another
  in TimestampingLoggerTest
* Misc grammar cleanup